displaying all possible commands on pressing tab

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,6 @@
         "ostream": "cpp",
         "iostream": "cpp",
         "string": "cpp",
-        "iosfwd": "cpp",
-        "filesystem": "cpp"
+        "iosfwd": "cpp"
     }
 }
